# Almach

./: CMakeLists.txt  README.md  backup.txt  config.ini
inc/: calibrate.h  catalog.h  config.h  kb.h  manual.h  pid.h  track.h  uart.h  utc.h
lib/: CMakeLists.txt
src/: main.c
src/function/: catalog.c  config.c  kb.c  pid.c  uart.c  utc.c
src/mode/: calibrate.c  manual.c  track.c
